--- a/.gitignore
+++ b/.gitignore
@@ -4,12 +4,13 @@
 
 # misc
 .DS_Store
-
+.env*
 
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+.env
 build
 .vscode
 .editorconfig
-
+.gitignore
